# leekscript-rs

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: parse_analyze_format.rs
crates/leekscript-analysis/: Cargo.toml
crates/leekscript-analysis/src/: builtins.rs  deprecation.rs  error.rs  lib.rs  node_helpers.rs  scope.rs  scope_builder.rs  scope_extents.rs  signature_loader.rs  type_checker.rs  type_expr.rs  validator.rs
crates/leekscript-analysis/src/tests/: document_analysis.rs  mod.rs  scope.rs  type_checker.rs  validation.rs
crates/leekscript-core/: Cargo.toml
crates/leekscript-core/src/: doc_comment.rs  lib.rs  parser.rs  preprocess.rs  syntax.rs  types.rs
crates/leekscript-core/src/grammar/: expressions.rs  keywords.rs  literals.rs  mod.rs  operators.rs  signature.rs  statements.rs  token_stream.rs  trivia.rs
crates/leekscript-document/: Cargo.toml
crates/leekscript-document/src/: lib.rs
crates/leekscript-tooling/: Cargo.toml
crates/leekscript-tooling/src/: lib.rs  transform.rs  tree_display.rs  visitor.rs
crates/leekscript-tooling/src/formatter/: config.rs  driver.rs  options.rs
examples/: README.md  example_class.rs  example_expressions.rs  example_types.rs  parse_leek.rs  parse_leekscript.rs  tree.rs  validate_with_signatures.rs
examples/leekscript/invalid/: invalid.leek
examples/leekscript/valid/: anonymous_function.leek  array_map_literals.leek  class.leek  do_while.leek  for_in_loop.leek  for_loop.leek  if_else.leek  include.leek  numbers_arithmetic.leek  object_literal.leek  set_interval.leek  string_special_literals.leek  typed_function.leek  variable_declarations.leek  variables_simple.leek  while_loop.leek
examples/signatures/: README.md  stdlib_constants.sig  stdlib_functions.sig
scripts/: constants.json  functions.json  gen_stdlib_sigs.py
src/: cli.rs  doc_comment.rs  document.rs  lib.rs  lsp.rs  main.rs  parser.rs  preprocess.rs  signatures.rs  syntax.rs  transform.rs  tree_display.rs  types.rs  utf16.rs  visitor.rs
src/analysis/: builtins.rs  deprecation.rs  error.rs  mod.rs  node_helpers.rs  scope.rs  scope_builder.rs  scope_extents.rs  signature_loader.rs  tests.rs  type_checker.rs  type_expr.rs  validator.rs
src/formatter/: config.rs  driver.rs  mod.rs  options.rs
src/grammar/: expressions.rs  keywords.rs  literals.rs  mod.rs  operators.rs  signature.rs  statements.rs  token_stream.rs  trivia.rs
src/lsp/: code_actions.rs  completion.rs  content_changes.rs  definition.rs  document_link.rs  document_symbol.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  rename.rs  semantic_tokens.rs  workspace_symbol.rs
tests/: format_integration.rs  validate_integration.rs
tests/common/: mod.rs
tests/fixtures/: format_weird_spacing.leek  included.leek  invalid_undefined.leek  main_with_include.leek  simple.leek
