[package]
name = "leekscript-analysis"
version = "0.1.0"
edition = "2021"
description = "LeekScript semantic analysis: scope, validation, type checking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leek-wars/leekscript-rs"

[dependencies]
leekscript-core = { path = "../leekscript-core", version = "0.1.0" }
sipha = { version = "2.0.0", features = ["miette", "emit"] }
sipha-analysis = "2.0.0"

[lints.rust]
unsafe_code = "forbid"

[dev-dependencies]
leekscript-document = { path = "../leekscript-document", version = "0.1.0" }
