[package]
name = "leekscript-analysis"
version = "0.1.1-alpha.2"
edition = "2021"
description = "LeekScript semantic analysis: scope, validation, type checking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leek-wars/leekscript-rs"

[dependencies]
leekscript-core = { path = "../leekscript-core", version = "0.1.1-alpha.2" }
sipha = { version = "2.0.0", features = ["miette", "emit"] }
sipha-analysis = "2.0.0"

[dev-dependencies]
leekscript-document = { path = "../leekscript-document", version = "0.1.1-alpha.2" }

[lints.rust]
unsafe_code = "forbid"
