[package]
name = "leekscript-document"
version = "0.1.0"
edition = "2021"
description = "LeekScript document-level API: DocumentAnalysis, definition map, doc maps"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leek-wars/leekscript-rs"

[dependencies]
leekscript-analysis = { path = "../leekscript-analysis" }
leekscript-core = { path = "../leekscript-core" }
sipha = { version = "2.0.0", features = ["miette", "emit"] }
sipha-analysis = "2.0.0"

[lints.rust]
unsafe_code = "forbid"
